# SIGUI

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODEX_BOOTSTRAP_PROMPT.md  README.md  THIRD_PARTY_NOTICES.md  partitions_d1l.csv  sdkconfig.defaults
.github/: CODEOWNERS  d1l-build-inputs.json
cmake/: d1l_source_provenance.cmake
docs/: ATTRIBUTIONS.md  BUILD_PROVENANCE_D1L.md  CODEX_GOAL_PROMPT_D1L.md  COMPANION_3BYTE_COMPATIBILITY.md  COMPLETION_LEDGER.yaml  COMPLETION_STATUS.md  D1L_BOARD_BRINGUP.md  D1L_BUILD_DECISION.md  D1L_SD_CARD_GUIDED_INSTALL.md  DESKOSFINAL.md  DEVELOPER_GUIDE_D1L.md  FAST_RELEASE_WORKFLOW_D1L.md  FLASH_RECOVERY_D1L.md  FULL_FEATURE_DEVELOPMENT_GUIDE_D1L_2026-07-18.md  HARDWARE_VALIDATION_D1L_2026-06-29.md  KNOWN_LIMITATIONS.md  KRABSTHOUGHTS.MD  MESHCORE_CONFORMANCE.md  MeshCore_DeskOS_D1L_Codex_Roadmap_Feature_Matrix_2026-07-02.md  MeshCore_DeskOS_D1L_Final_Roadmap_and_Codex_Handoff_2026-07-02.md  PHASE1_CHECKPOINT.md  PHASE2_FOUNDATION_CHECKPOINT.md  PHASE3_ONBOARDING_CHECKPOINT.md  PHASE3_UI_SHELL_CHECKPOINT.md  PHASE3_UI_SIMULATOR_CHECKPOINT.md  PHASE4_CONTACT_DETAIL_CHECKPOINT.md  PHASE4_CONTACT_STORE_CHECKPOINT.md  PHASE4_DM_ACK_PATH_CHECKPOINT.md  PHASE4_DM_PUBLIC_KEY_FOUNDATION_CHECKPOINT.md  PHASE4_DM_STORE_CHECKPOINT.md  PHASE4_DM_THREAD_CHECKPOINT.md  PHASE4_DM_THREAD_HISTORY_CHECKPOINT.md  PHASE4_DM_THREAD_READ_CHECKPOINT.md  PHASE4_HEARD_NODE_STORE_CHECKPOINT.md  PHASE4_LARGE_LIST_STRESS_CHECKPOINT.md  PHASE4_MESSAGE_STORE_CHECKPOINT.md  PHASE4_PUBLIC_COMPOSER_CHECKPOINT.md  PHASE4_PUBLIC_HISTORY_CHECKPOINT.md  PHASE4_ROUTE_DETAIL_CHECKPOINT.md  PHASE4_ROUTE_STORE_CHECKPOINT.md  (+25 more)
main/: CMakeLists.txt  app_main.c  d1l_config.h
main/app/: app_model.c  app_model.h  dm_conversation_list.c  dm_conversation_list.h  identity_state.h  release_profile.c  release_profile.h  settings_envelope.c  settings_envelope.h  settings_model.c  settings_model.h  settings_protocol_migration.c  settings_protocol_migration.h  settings_time_checkpoint.c  settings_time_checkpoint.h
main/comms/: ble_companion.c  ble_companion.h  ble_companion_queue.c  ble_companion_queue.h  companion_3byte.c  companion_3byte.h  connectivity_boot_guard.c  connectivity_boot_guard.h  connectivity_manager.c  connectivity_manager.h  usb_command_parser.c  usb_command_parser.h  usb_console.c  usb_console.h  wifi_retry_policy.c  wifi_retry_policy.h
main/diagnostics/: crash_log.c  crash_log.h  health_monitor.c  health_monitor.h
main/hal/: backlight.c  backlight.h  indicator_board.c  indicator_board.h  indicator_pins.c  indicator_pins.h  rp2040_bridge.c  rp2040_bridge.h  rp2040_file_reply.c  rp2040_file_reply.h  rp2040_sd_reply.c  rp2040_sd_reply.h  sx1262_indicator.c  sx1262_indicator.h
main/map/: map_marker_truth.c  map_marker_truth.h  map_math.c  map_math.h  map_png_decoder.c  map_png_decoder.h  map_point_projection.c  map_point_projection.h  map_view_service.c  map_view_service.h  map_viewport_truth_transition.c  map_viewport_truth_transition.h
main/mesh/: advert_data.c  advert_data.h  channel_message_coordinator.c  channel_message_coordinator.h  channel_store.c  channel_store.h  contact_store.c  contact_store.h  contact_uri.c  contact_uri.h  dm_delivery_state.c  dm_delivery_state.h  dm_store.c  dm_store.h  ed25519_canonical.h  mesh_inspector.c  mesh_inspector.h  meshcore_ack_completion.h  meshcore_ack_dispatch.h  meshcore_admin_dispatch.c  meshcore_admin_dispatch.h  meshcore_admin_runtime.c  meshcore_admin_runtime.h  meshcore_advert_admission.c  meshcore_advert_admission.h  meshcore_command_guard.h  meshcore_crypto.c  meshcore_crypto.h  meshcore_dm_retry.h  meshcore_identity_exchange.c  meshcore_identity_exchange.h  meshcore_lifetime.h  meshcore_packet_hash.c  meshcore_packet_hash.h  meshcore_packet_semantics.c  meshcore_packet_semantics.h  meshcore_path_dispatch.h  meshcore_path_state.c  meshcore_path_state.h  meshcore_radio_profile.c  (+27 more)
main/platform/: secure_random.c  secure_random.h  time_display.c  time_display.h  time_service.c  time_service.h  time_service_core.c  time_service_core.h
main/storage/: export_store.c  export_store.h  factory_reset.c  factory_reset.h  map_tile_store.c  map_tile_store.h  retained_blob_store.c  retained_blob_store.h  retained_store_scheduler.c  retained_store_scheduler.h  storage_status.c  storage_status.h  storage_status_policy.c  storage_status_policy.h
main/ui/: ui_ble.c  ui_ble.h  ui_channel_sheets.c  ui_channel_sheets.h  ui_chrome.c  ui_chrome.h  ui_compose_eligibility.c  ui_compose_eligibility.h  ui_connectivity.c  ui_connectivity.h  ui_contact_sheets.c  ui_contact_sheets.h  ui_device_sheets.c  ui_device_sheets.h  ui_dm_identity.c  ui_dm_identity.h  ui_home.c  ui_home.h  ui_home_view.c  ui_home_view.h  ui_keyboard.c  ui_keyboard.h  ui_map.c  ui_map.h  ui_messages.c  ui_messages.h  ui_modal.c  ui_modal.h  ui_more_view.c  ui_more_view.h  ui_navigation.c  ui_navigation.h  ui_node_detail.c  ui_node_detail.h  ui_nodes.c  ui_nodes.h  ui_nodes_summary.c  ui_nodes_summary.h  ui_packets.c  ui_packets.h  (+12 more)
patches/: sensecap_indicator_idf55_compat.patch  sensecap_indicator_touch_fix.patch  sensecap_indicator_tx_origin.patch
requirements/: ci-host-windows.txt
scripts/: artifact_metadata.py  autonomous_hardware_validate_d1l.py  backup_flash_d1l.py  build_d1l.ps1  capture_core_actions_run_d1l.py  capture_core_github_defects_d1l.py  compare_release_reproducibility_d1l.py  completion_ledger.py  completion_pack_manifest.py  core_flash_only_d1l.py  core_install_recovery_review_d1l.py  core_reboot_persistence_d1l.py  core_release_gate_audit_d1l.py  core_smoke_d1l.py  core_ui_corruption_probe_d1l.py  flash_d1l.ps1  flash_rp2040_sd_bridge_uf2.py  guided_sd_install_d1l.py  manual_ui_review_d1l.py  meshcore_conformance_d1l.py  meshcore_remaining_fuzz_d1l.py  meshcore_semantic_packet_fuzz_d1l.py  meshcore_signed_advert_runtime_d1l.py  monitor_d1l.ps1  package_release_d1l.py  post_flash_feature_matrix_d1l.py  prepare_retained_nvs_upgrade_d1l.py  probe_d1l_dm.py  provenance_d1l.py  reboot_transition_trace_d1l.py  release_gate_audit_d1l.py  (+35 more)
(+450 files in other folders)
